# pyapp.aiobotocore

./: .gitignore  README.rst  docker-compose.yaml  pyproject.toml  sample.py  setup.cfg
.github/: dependabot.yml
pae/aioaws/: session.py
pyapp_ext/aiobotocore/: __init__.py  checks.py  default_settings.py  dynamodb.py  factory.py  queues.py  session.py
pyapp_ext/aiobotocore/dynamodb/: __init__.py  attributes.py  base.py  constants.py  dataclasses.py  dcs.py  exceptions.py  session.py  utils.py
tests/: test_checks.py  test_factory.py
