[metadata]
name = pyApp-AIOBotocore
author = Tim Savage
author-email = tim@savage.company
description = pyApp Extension for AIOBotocore
long-description = file: README.rst
url = https://github.com/timsavage/pyapp.aiobotocore==0.11.0
platforms = any
license = BSD-3-Clause
licence_files =
    LICENSE
keywords =
    application
    framework
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6
packages = pyapp_ext.aiobotocore==0.11.0
test_suite = tests
setup_requires =
    pytest-runner==5.2
    setuptools >=38.3
install_requires =
    pyapp >=4.0
    pyapp-messaging >= 0.2
    aiobotocore==0.11.0
tests_require =
    mock
    pytest
    pytest-cov

[options.entry_points]
pyapp.extensions =
    pyapp.aiobotocore = pyapp_ext.aiobotocore:Extension

[options.extras_require]
yaml =
    pyyaml==5.2
dev =
    docutils==0.15.2
    black

[aliases]
test = pytest

[tool:pytest]
addopts =
    --cov=pyapp_ext.aiobotocore==0.11.0

[check]
metadata = true
restructuredtext = true
strict = true
